NEWSTART-424 display selected news categories as 'all' or fraction of options. align checkbox inputs to labels. fix Safari checkbox flicker on hover

--- a/app/assets/css/multiselect.less
+++ b/app/assets/css/multiselect.less
@@ -7,6 +7,11 @@
     // Give the options a bit more room
     padding-top: .75em;
     padding-bottom: .75em;
+
+    > input[type="checkbox"] {
+      margin-top: 5px;
+      -webkit-transform: translateZ(0); // prevent checkbox flicker
+    }
   }
 }
 
